--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,82 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  --primary-color: #1a73e8;
+  --secondary-color:#0061fe;
+  --background-color: #f8f9fa;
+  --sidebar-color: #ffffff;
+  --text-color: #202124;
+  --border-color: #dadce0;
+}
+
+html {
+  background: var(--background-color);
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+}
+
+body {
+  color: var(--text-color);
+  padding: 0;
+  margin: 0;
+}
+
+h1 {
+  color: var(--primary-color);
   text-align: center;
 }
 
+button {
+  background: var(--secondary-color);
+  color: white;
+  font-family: "Roboto", Arial, Helvetica, sans-serif;
+  border: none;
+  padding: 12px;
+  border-radius: 4px;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh;
+}
+
+.container>div {
+  background: white;
+  padding: 40px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  width: 100%;
+  max-width: 450px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+form>div>input {
+  padding: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: 4px;
+  font-size: 14px;
+}
+
+.container>div>form>div {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.container>div>form+p {
+  text-align: center;
+}
+
+.authLink {
+  text-decoration: none;
+  color: var(--primary-color);
+  font-weight: bold;
+}
