--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 #root {
   --primary-color: #1a73e8;
-  --secondary-color:#0061fe;
+  --secondary-color: #0061fe;
   --background-color: #f8f9fa;
   --sidebar-color: #ffffff;
   --text-color: #202124;
@@ -43,11 +43,11 @@ button {
   height: 100dvh;
 }
 
-.container>div {
+.container > div {
   background: white;
   padding: 40px;
   border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   width: 100%;
   max-width: 450px;
 }
@@ -58,20 +58,20 @@ form {
   gap: 10px;
 }
 
-form>div>input {
+form > div > input {
   padding: 10px;
   border: 1px solid var(--border-color);
   border-radius: 4px;
   font-size: 14px;
 }
 
-.container>div>form>div {
+.container > div > form > div {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
 
-.container>div>form+p {
+.container > div > form + p {
   text-align: center;
 }
 
@@ -79,4 +79,42 @@ form>div>input {
   text-decoration: none;
   color: var(--primary-color);
   font-weight: bold;
+}
+.rootCont {
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+}
+.rootCont > nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+.rootCont > div {
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+}
+main {
+  width: 100%;
+}
+.rootCont > div > aside,
+.rootCont > div > aside > div {
+  display: flex;
+  flex-direction: column;
+}
+.rootCont > div > aside {
+  gap: 35px;
+}
+.rootCont > div > aside > div {
+  gap: 15px;
+}
+footer {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
 }
