--- a/client/src/App.css
+++ b/client/src/App.css
@@ -80,6 +80,11 @@ form > div > input {
   color: var(--primary-color);
   font-weight: bold;
 }
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .rootCont {
   display: flex;
   flex-direction: column;
@@ -91,6 +96,8 @@ form > div > input {
   justify-content: center;
   align-items: center;
   gap: 25px;
+  padding: 10px 20px;
+  border-bottom: 1px solid var(--border-color);
 }
 .rootCont > div {
   display: flex;
@@ -99,14 +106,30 @@ form > div > input {
 }
 main {
   width: 100%;
+  padding: 20px;
 }
-.rootCont > div > aside,
-.rootCont > div > aside > div {
+.rootCont > div > aside {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+.rootCont>div>aside>div+div {
+  display: flex;
+  flex-direction: column;
+
+}
+.rootCont > div > aside > div >button{
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-weight: bold;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom: 20px;
 }
 .rootCont > div > aside {
   gap: 35px;
+  padding: 20px;
+  border-right: 1px solid var(--border-color);
 }
 .rootCont > div > aside > div {
   gap: 15px;
@@ -117,4 +140,22 @@ footer {
   gap: 15px;
   justify-content: center;
   align-items: center;
+  border-top: 1px solid var(--border-color);
+}
+.header{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.searchbar{
+  display: flex;
+  align-items: center;
+  border-radius: 20px;
+  padding: 5px 15px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+.searchbar>input {
+  border: none;
+  outline: none;
+  padding: 8px;
 }
