continuing formatting and adding styles

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -154,7 +154,7 @@ footer {
   padding: 5px 15px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
-.searchbar>input {
+.searchbar>form>input {
   border: none;
   outline: none;
   padding: 8px;
