--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,3 +159,38 @@ footer {
   outline: none;
   padding: 8px;
 }
+.subHeader {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  margin-top: 10px;
+}
+.pageCont {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.subHeader>select,
+.subHeader>div  {
+  padding: 6px 12px;
+  border-radius: 15px;
+  border: 1px solid var(--border-color);
+  font-size: 15px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.four:hover {
+  background: var(--secondary-color);
+  color: white;
+  font-weight: bold;
+  transform: scale(1.1);
+}
+tr,table {
+  margin-top: 10px;
+  border-bottom: 1px solid var(--border-color);
+  border-collapse: collapse;
+  text-align: center;
+}
+td {
+  padding: 12px;
+}
