--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@ h1 {
   color: var(--primary-color);
   text-align: center;
 }
-.delete {
+.delete, .update {
   background: none;
   color: black;
   padding: 0px;
@@ -122,6 +122,14 @@ main {
 .rootCont>div>aside>div+div {
   display: flex;
   flex-direction: column;
+  padding-right: 45px;
+}
+.asidePaths>div {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+  gap: 8px;
 
 }
 .custom-upload {
@@ -226,11 +234,53 @@ a {
 input[type ='file'] {
   display: none;
 }
-.actions {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
+
+.gridCont {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-template-rows: 250px;
+  grid-auto-rows: 250px;
+  grid-gap: 15px;
+  padding: 10px;
 }
-.actions div {
+.card {
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  background: var(--sidebar-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   cursor: pointer;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+}
+.card:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #f5f5f5;
+}
+.card >div:first-child {
+  font-size: larger;
+  font-weight: bolder;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.card>div:not(.card>div:first-child) {
+  font-size: 14px;
+}
+.slider button {
+  border: none;
+  background: var(--background-color);
+  color: black;
+  transition: all 0.3s ease-in-out;
+}
+.slider button:hover {
+  background: var(--secondary-color);
+  color: white;
+}
+.slider{
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
 }
